Fixed layout bug for special radio/checkbox

--- a/_sass/modules/_cards.scss
+++ b/_sass/modules/_cards.scss
@@ -149,6 +149,7 @@
   input[type="checkbox"] {
     + label {
       border-radius: 1rem 1rem 0 0;
+      position: unset;
       &:after {
         content: '';
         position: absolute;
